# stagehand

./: CONTEXT.md  CONTRIBUTING.md  FEEDBACK.md  PLAN.md  README.md  TEST-REPORT.md  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: ai_pipeline.py  basic_pipeline.py
src/stagehand/: __init__.py  checkpoint.py  cli.py  dashboard.py  pipeline.py  registry.py
src/stagehand/providers/: __init__.py  claude.py  gemini.py  http.py  openai.py
tests/: test_checkpoint.py  test_dashboard.py  test_examples.py  test_examples_qa.py  test_pipeline.py  test_providers.py
