[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stagehand"
version = "0.1.0"
description = "Minimal Python pipeline runner with checkpointing and AI support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []  # zero runtime dependencies

keywords = ["pipeline", "orchestration", "workflow", "checkpointing", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[project.optional-dependencies]
claude  = ["anthropic>=0.40.0"]
openai  = ["openai>=1.0.0"]
gemini  = ["google-generativeai>=0.8.0"]
all     = ["anthropic>=0.40.0", "openai>=1.0.0", "google-generativeai>=0.8.0"]
dev     = ["pytest>=7.0", "pytest-cov", "hatch"]

[project.scripts]
stagehand = "stagehand.cli:main"

[project.urls]
Homepage   = "https://github.com/ankitpyc/stagehand"
Repository = "https://github.com/ankitpyc/stagehand"
Issues     = "https://github.com/ankitpyc/stagehand/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stagehand"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["src/stagehand"]
